@@ -1,3 +1,7 @@
+2007-12-16  Brian Matherly <brian@gramps-project.org>
+	* src/plugins/Calendar.py: Properly initialize Filter option.
+	* src/PluginUtils/_MenuOptions.py: Properly initialize Filter option.
+
 2007-12-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/ReportBase/_PaperMenu.py: get margins in PaperFrame constructor
 	* src/ReportBase/_DocReportDialog.py: pass margins to PaperFrame constructor
